Partial_14Dec2021/force-app/main/default/objects/Promotion__c/Promotion__c.object-meta.xml
<CustomObject>
    <label>Promotion</label>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Promotion No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>