Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Account_Column_Club_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Column_Club_ID__c</fullName>
    <formula>Dealer1__r.Column_club_ID__c</formula>
    <label>Account Column Club ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>