Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Action_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Action_Remarks__c</fullName>
    <label>Action Remarks</label>
    <type>TextArea</type>
</CustomField>