Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Actual_No_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Actual_No_of_Members__c</fullName>
    <label>Actual No. of members added</label>
    <summarizedField>Promotion_Member__c.Flag__c</summarizedField>
    <summaryForeignKey>Promotion_Member__c.Promotions2__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>