Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Advance_Received__c.field-meta.xml
<CustomField>
    <fullName>Advance_Received__c</fullName>
    <description>Advance received from Ashirvad in rupees</description>
    <inlineHelpText>Advance received from Ashirvad in rupees</inlineHelpText>
    <label>Advance Received</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>