Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Amount_spent_by_the_dealer__c.field-meta.xml
<CustomField>
    <fullName>Amount_spent_by_the_dealer__c</fullName>
    <description>Amount spent by the dealer in rupees</description>
    <inlineHelpText>Amount spent by the dealer in rupees</inlineHelpText>
    <label>Amount spent by the dealer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>