Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Bandhan_Plumbing_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Bandhan_Plumbing_Created_Date__c</fullName>
    <formula>Dealer1__r.Bandhan_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bandhan Plumbing Created Date</label>
    <type>Date</type>
</CustomField>