Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Bill_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Handover_Date__c</fullName>
    <label>Bill Handover Date</label>
    <type>Date</type>
</CustomField>