Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Call_Center_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Remarks__c</fullName>
    <label>Promotion Activity Remarks</label>
    <type>TextArea</type>
</CustomField>