Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Call_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Completed_Date__c</fullName>
    <label>Call Completed Date</label>
    <type>Date</type>
</CustomField>