Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Column_club_ID_2_0__c.field-meta.xml
<CustomField>
    <fullName>Column_club_ID_2_0__c</fullName>
    <formula>Dealer1__r.Column_club_ID_2_0__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Column club ID 2.0</label>
    <type>Text</type>
</CustomField>