Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Company_Share__c.field-meta.xml
<CustomField>
    <fullName>Company_Share__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Company Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>