Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <description>Credit Note amount to dealer in rupees</description>
    <inlineHelpText>Credit Note amount to dealer in rupees</inlineHelpText>
    <label>Credit Note amount to Dealer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>