Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <formula>DATEVALUE(CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>