Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Dealer1__c.field-meta.xml
<CustomField>
    <fullName>Dealer1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Party_Type__c</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotions (Dealer)</relationshipLabel>
    <relationshipName>Promotions_New</relationshipName>
    <type>Lookup</type>
</CustomField>