Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Dealer_Bandhan_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Bandhan_Customer__c</fullName>
    <formula>Dealer1__r.Bandhan_Cutsomer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Bandhan Customer</label>
    <type>Checkbox</type>
</CustomField>