Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/dealer_market_type__c.field-meta.xml
<CustomField>
    <fullName>dealer_market_type__c</fullName>
    <formula>TEXT(Dealer1__r.Market__c)</formula>
    <label>dealer market type</label>
    <type>Text</type>
</CustomField>