Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Dealer_share__c.field-meta.xml
<CustomField>
    <fullName>Dealer_share__c</fullName>
    <label>Dealer share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>