Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/District_from_taluk__c.field-meta.xml
<CustomField>
    <fullName>District_from_taluk__c</fullName>
    <formula>TEXT( Taluka__r.District__c)</formula>
    <label>District from taluk</label>
    <type>Text</type>
</CustomField>