Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <formula>Owner:User.EmployeeNumber</formula>
    <label>Employee Number</label>
    <type>Text</type>
</CustomField>