Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Ending_Kms__c.field-meta.xml
<CustomField>
    <fullName>Ending_Kms__c</fullName>
    <label>Ending Kms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>