Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Exhibition_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Name__c</fullName>
    <label>Exhibition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>