Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Geo_Location_JSON__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location_JSON__c</fullName>
    <formula>&quot;{latitude: &quot;&amp;TEXT(Geo_Location__Latitude__s)&amp;&quot;, longitude: &quot;&amp;TEXT(Geo_Location__Longitude__s)&amp;&quot;}&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo Location JSON</label>
    <type>Text</type>
</CustomField>