Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Gift_Given_11__c.field-meta.xml
<CustomField>
    <fullName>Gift_Given_11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mega Meet Gift 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>inventory__c.Type__c</field>
            <operation>equals</operation>
            <value>GIFT ITEMS</value>
        </filterItems>
        <filterItems>
            <field>inventory__c.Owner_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>inventory__c</referenceTo>
    <relationshipLabel>Promotions (Gift_Given_11)</relationshipLabel>
    <relationshipName>Promotions2</relationshipName>
    <type>Lookup</type>
</CustomField>