Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Gifts_given__c.field-meta.xml
<CustomField>
    <fullName>Gifts_given__c</fullName>
    <label>Gifts given</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>caps</fullName>
            </value>
            <value>
                <fullName>carrybags</fullName>
            </value>
            <value>
                <fullName>keychains</fullName>
            </value>
            <value>
                <fullName>lunchboxes</fullName>
            </value>
            <value>
                <fullName>measuring tapes</fullName>
            </value>
            <value>
                <fullName>pens</fullName>
            </value>
            <value>
                <fullName>pigeon kitchen sets</fullName>
            </value>
            <value>
                <fullName>stationary kits</fullName>
            </value>
            <value>
                <fullName>table tops</fullName>
            </value>
            <value>
                <fullName>Tools Kit</fullName>
            </value>
            <value>
                <fullName>Torches</fullName>
            </value>
            <value>
                <fullName>t-shirts</fullName>
            </value>
            <value>
                <fullName>umbrellas</fullName>
            </value>
            <value>
                <fullName>wallets</fullName>
            </value>
            <value>
                <fullName>wind cheaters</fullName>
            </value>
            <value>
                <fullName>wrist watches</fullName>
            </value>
            <value>
                <fullName>No gifts given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>