Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/IFSC_Code_of_Branch__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code_of_Branch__c</fullName>
    <label>IFSC Code of Branch</label>
    <length>30</length>
    <type>Text</type>
</CustomField>