Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Actual Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>