Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/ManagerId__c.field-meta.xml
<CustomField>
    <fullName>ManagerId__c</fullName>
    <formula>Owner:User.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ManagerId</label>
    <type>Text</type>
</CustomField>