Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Mega_Mini__c.field-meta.xml
<CustomField>
    <fullName>Mega_Mini__c</fullName>
    <formula>IF( TEXT(Type__c)=&apos;Architects / Engineers / Consultants Factory Visit&apos; , &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Architects Meets&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Boarers Meets&apos; , &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Builders Meets&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Column Dealer / Distributor Meets&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Column DSM Meet / Training&apos;, &apos;Mega&apos;,IF(TEXT(Type__c)=&apos;Engineers Meets&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Mechanics Factory Visit&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Mega Farmer Meets&apos;, &apos;Mega&apos;, IF(TEXT(Type__c)=&apos;Mega Mechanic Meets&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Mega Plumbers Meets&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Plumbers Factory Visit&apos;, &apos;Mega&apos;,   IF(TEXT(Type__c)=&apos;Plumbing Dealer / Distributor Meets&apos;, &apos;Mega&apos;, IF(TEXT(Type__c)=&apos;Plumbing Dealers Factory Visits&apos;, &apos;Mega&apos;,   IF(TEXT(Type__c)=&apos;Plumbing DSM Meet/Training&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Projects DSM Meet / Training&apos;, &apos;Mega&apos;,  IF(TEXT(Type__c)=&apos;Others&apos;, &apos;Others&apos;, IF(TEXT(Type__c)=&apos;Bombarding&apos;, &apos;Others&apos;,  IF(TEXT(Type__c)=&apos;Group Activity&apos;, &apos;Others&apos;, &apos;Mini&apos;) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ))</formula>
    <label>Mega/Mini</label>
    <type>Text</type>
</CustomField>