Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Name_of_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Bank__c</fullName>
    <label>Name of Bank</label>
    <length>55</length>
    <type>Text</type>
</CustomField>