Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Name_of_Plumber__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Plumber__c</fullName>
    <label>Name of Plumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>