Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/No_of_member_attended__c.field-meta.xml
<CustomField>
    <fullName>No_of_member_attended__c</fullName>
    <formula>Total_no_of_attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of members attended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>