Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/No_of_Members_attended__c.field-meta.xml
<CustomField>
    <fullName>No_of_Members_attended__c</fullName>
    <label>No of Members attended(not used)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>