Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Order_Value_Received__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_Received__c</fullName>
    <label>Order Value Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>