Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Percent_of_attendees__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_attendees__c</fullName>
    <formula>if(OR(Actual_No_of_Members__c ==0 ,Total_no_of_attendees__c ==0),0,Actual_No_of_Members__c  /  Total_no_of_attendees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of attendees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>