Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Look up for Oppu</description>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>