Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Promotion_Club_ID__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Club_ID__c</fullName>
    <formula>Dealer1__r.Plumbing_club_ID__c</formula>
    <label>Promotion Club ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>