Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Promotion_Status__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Status__c</fullName>
    <label>Promotion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Call Completed</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Invalid number</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>