Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/PromotionCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PromotionCreatedDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PromotionCreatedDate</label>
    <type>DateTime</type>
</CustomField>