Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Report_c__c.field-meta.xml
<CustomField>
    <fullName>Report_c__c</fullName>
    <label>Report</label>
    <type>TextArea</type>
</CustomField>