Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site Visit</label>
    <referenceTo>Site_Visit__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>