Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Starting_Kms__c.field-meta.xml
<CustomField>
    <fullName>Starting_Kms__c</fullName>
    <label>Starting Kms</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>