Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Taluka__c.field-meta.xml
<CustomField>
    <fullName>Taluka__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Taluka</label>
    <referenceTo>AP_Taluk_Master__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>