Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Team_Leader_Present__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader_Present__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader Present</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Promotions5</relationshipName>
    <type>Lookup</type>
</CustomField>