Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/TL_Manager__c.field-meta.xml
<CustomField>
    <fullName>TL_Manager__c</fullName>
    <formula>CreatedBy.Manager_Name__c</formula>
    <label>TL/Manager</label>
    <type>Text</type>
</CustomField>