Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Total_Kms__c.field-meta.xml
<CustomField>
    <fullName>Total_Kms__c</fullName>
    <formula>Ending_Kms__c  -  Starting_Kms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Kms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>