Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Total_no_of_attachment__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_attachment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To count number of attachments</description>
    <label>Total no of attachments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>